welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:22: error: identifier expected but '(' found.
  return T.(num)
           ^